[package]
name = "algonium"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"
repository = "https://github.com/ichyo/rust-algorithms"
readme = "README.md"
license = "MIT"
keywords = ["algorithm", "algorithms"]
category = ["algorithms"]
description = "a collection of classic algorithms for programming contests"

[badges]
travis-ci = { repository = "ichyo/rust-algorithms" }
